--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     
     <meta name="author" content="Christopher Milton">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="robots" content="noindex">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
     <title>Home - chrismilton.net</title>
